# AugmentOS

./: .gitignore  .lintstagedrc.js  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json
.github/: CODEOWNERS
mcu_client/nrf5340_ble_simulator/: .gitignore  CHANGELOG.md  CMakeLists.txt  QSPI_4MB_DRIVER_ISSUE.md  QSPI_SFDP_CONFIGURATION.md  app.overlay  mentraos_ble.proto  mx25u256_nrfutil_config.json  npm1300_config.overlay  pm_static.yml  prj.conf  sysbuild.conf  usb_cdc.conf
mcu_client/nrf5340_ble_simulator/boards/: nrf5340dk_nrf5340_cpuapp_ns.overlay
mcu_client/nrf5340_ble_simulator/custom_driver_module/drivers/display/lcd/: CMakeLists.txt  a6n.c  a6n.h
mcu_client/nrf5340_ble_simulator/src/: main.c  main.h  pdm_audio_stream.h  protobuf_handler.c  shell_battery_control.c  shell_display_control.c  shell_flash.c  shell_jlink_usb_switch.c  shell_lsm6dsv16x.c  shell_npm1300_led.c  shell_opt3006.c  task_audio_loopback.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_battery/include/: GY051023C21250310k_25C.inc  mos_fuel_gauge.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_battery/src/: mos_fuel_gauge.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_ble/include/: mos_ble_service.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_ble/src/: mos_ble_service.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_button/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_button/include/: mos_button_app.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_button/src/: mos_button_app.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_dfu_progress/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_dfu_progress/include/: mos_dfu_progress.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_dfu_progress/src/: mos_dfu_progress.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_interrupt/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_interrupt/include/: interrupt_handler.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_interrupt/src/: interrupt_handler.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_jlink_usb_switch/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_jlink_usb_switch/include/: mos_jlink_usb_switch_app.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_jlink_usb_switch/src/: mos_jlink_usb_switch_app.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_lvgl_display/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_lvgl_display/include/: display_config.h  mos_lvgl_display.h
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_lvgl_display/src/: display_config.c  mos_lvgl_display.c
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_pdm/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_components/mos_pdm/include/: pdm_audio_stream.h
mcu_client/nrf5340_ble_simulator/src/mos_driver/: CMakeLists.txt
mcu_client/nrf5340_ble_simulator/src/mos_driver/include/: lsm6dsv16x.h  mos_audio_i2s.h  mos_button.h  mos_jlink_usb_switch.h  mos_lsm6dsv16x.h  mos_npm1300_ldsw.h  mos_npm1300_led.h  mos_opt3006.h  mos_pdm.h  mos_usb_detect.h  opt3006.h  usb_detect.h
mcu_client/nrf5340_ble_simulator/src/mos_driver/src/: lsm6dsv16x.c  mos_audio_i2s.c  mos_button.c  mos_jlink_usb_switch.c  mos_lsm6dsv16x.c  mos_npm1300_ldsw.c  mos_npm1300_led.c  mos_opt3006.c  mos_pdm.c  mos_usb_detect.c  opt3006.c  usb_detect.c
mcu_client/nrf5340_ble_simulator/src/proto/: CMakeLists.txt  mentraos_ble.pb.c  mentraos_ble.pb.h
mcu_client/nrf5340_ble_simulator/src/protobuf/: CMakeLists.txt  protobuf_handler.c  protobuf_handler.h
mcu_client/nrf5340_ble_simulator/sysbuild/: mcuboot.conf  mcuboot.overlay  private.pem
mcu_client/nrf5340_ble_simulator/sysbuild/ipc_radio/: app.overlay
(+1762 files in other folders)
